[package]
name = "json_web_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
jsonwebtoken = "9"
serde_json = { version = "1.0.114"}
serde = { version = "1.0.114", features = ["derive"] }
js-sys = "0.3"



[dependencies.web-sys]
version = "0.3.45"
features = [ "console" ]  # Do you have this line in your Cargo.toml?


[lib]
crate-type = ["cdylib", "rlib"]
